2006-02-19  Mark Wielaard  <mark@klomp.org>

	* batch_run (KEYS): Add GNU and GNU-CRYPTO
	(COMPILER): Export either GCJ or JAVAC.
	* choose-classes: Also search gnu and org hierarchies.
	* runner (RUNTIME): Export RUNTIME as JAVA.

2006-02-19  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/awt/Menu/addItem.java: New test.
	* gnu/testlet/java/awt/MenuBar/addMenu.java: New test.

2006-02-19  Raif S. Naffah  <raif@swiftdsl.com.au>

	* gnu/testlet/gnu/java/security/sig/TestOfSignatureCodecFactory.java:
	New file.
	* gnu/testlet/gnu/java/security/sig/rsa/TestOfRSASignatureCodec.java:
	Re-wrote to test all RSA signature codecs.
	* gnu/testlet/gnu/java/security/sig/dss/TestOfDSSSignatureCodec.java
	(test): Call new method.
	(testSignatureASN1Codec): New method.
	* gnu/testlet/gnu/java/security/key/TestOfKeyPairCodecFactory.java: New
	file.
	* gnu/testlet/gnu/java/security/jce/TestOfSignature.java
	(test): Call new methods.
	(testDSSRawSignature): Renamed testDSSSignatures.
	(testDSSSignatures): Add test for SHA160withDSS.
	(testRSAPKCS1Signatures): New method.
	(testSignature): New method.
	* gnu/testlet/gnu/java/security/jce/FakeProvider.java
	(FakeProvider): Added JCE signature mappings.

2006-02-17  Gary Benson  <gbenson@redhat.com>

	* gnu/testlet/java/lang/Thread/security.java: One more test.

2006-02-16  Gary Benson  <gbenson@redhat.com>

	* gnu/testlet/java/lang/Thread/security.java: New test.

2006-02-16  Gary Benson  <gbenson@redhat.com>

	* gnu/testlet/TestSecurityManager2.java: Added the ability to
	test for multiple permisson checks when in the mode that aborts
	the test after the permissions have been checked.

2006-02-15  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/JSpinner/NumberEditor/constructors.java: New test,
	* gnu/testlet/javax/swing/JSpinner/NumberEditor/getFormat.java: Likewise,
	* gnu/testlet/javax/swing/JSpinner/NumberEditor/getModel.java: Likewise.
