@@ -1,3 +1,8 @@
+2006-02-19  Olivier Jolly  <olivier.jolly@pcedev.com>
+
+	* gnu/testlet/java/lang/reflect/Proxy/DeclaringClass.java: New file.
+	* gnu/testlet/java/lang/reflect/Proxy/ProxyUtils.java: New file.
+
 2006-02-19  Mark Wielaard  <mark@klomp.org>
 
 	* batch_run (KEYS): Add GNU and GNU-CRYPTO
